--- a/CampersHub.Server/CampersHub.Server.csproj
+++ b/CampersHub.Server/CampersHub.Server.csproj
@@ -42,7 +42,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <Folder Include="Domain\Enums\" />
+    <Folder Include="Services\Validators\" />
   </ItemGroup>
 
 </Project>
